[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
dependencies = []
requires-python = ">=3.10"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
description = "{{cookiecutter.description}}"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
cli = []
doc = ["myst_parser >= 4.0.0", "sphinx >= 8.1.3", "sphinx_rtd_theme >= 3.0.1"]
test = ["pytest >= 8.3.3", "pytest-cov >= 6.0.0"]

dev = [
    "pre-commit",
    "{{cookiecutter.project_slug}}[cli]",
    "{{cookiecutter.project_slug}}[doc]",
    "{{cookiecutter.project_slug}}[test]",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.gh_repo_slug}}"
Documentation = "https://{{cookiecutter.project_slug}}.readthedocs.io"
Repository = "https://github.com/{{cookiecutter.gh_repo_slug}}.git"
"Bug Tracker" = "https://github.com/{{cookiecutter.gh_repo_slug}}/issues"
Changelog = "https://github.com/{{cookiecutter.gh_repo_slug}}/blob/main/CHANGELOG.md"

[project.scripts]
# {{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "Q"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src"]
